name:                hsonschema
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

executable hsonschema
  main-is:             Main.hs
  hs-source-dirs: app
  other-modules: HsonSchema
  build-depends:       base >=4.14 && <4.15
                     , aeson == 1.5.*
                     , bytestring >=0.10.10 && <0.11
                     , text >= 1.2.3 && < 1.3
                     , unordered-containers >= 0.2.10 && < 0.3
                     , vector >= 0.12.1 && < 0.13
                     , aeson-pretty >= 0.8.8 && < 0.9
  default-language:    Haskell2010
